[metadata]
# replace with your username:
name = flask-sock
version = 0.0.4
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = WebSocket support for Flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-sock
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-sock/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = flask_sock
packages = find:
python_requires = >=3.6
install_requires =
    wsproto

[options.packages.find]
where = src
