[metadata]
# replace with your username:
name = flask-sock
version = 0.6.1.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = WebSocket support for Flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-sock
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-sock/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    flask >= 2
    simple-websocket >= 0.5.1

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
